# tauri-wpu-cam

./: README.md  index.html  makefile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yml
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: yuyv_to_rgba_benchmark.rs
src-tauri/capabilities/: main.json
src-tauri/src/: app.rs  camera.rs  commands.rs  lib.rs  main.rs  shader.wgsl  utils.rs  webgpu.rs  windows.rs  windows_management.rs
ui/: main.ts
